--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">AnuSri</a>
+                    <a href="#" class="nav__logo">Pranit Gupta</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -37,5 +37,27 @@
                 </div>
             </nav>
         </header>
+
+        <main class="l-main">
+            <!--===== HOME =====-->
+            <section class="home bd-grid" id="home">
+                <div class="home__data">
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Anushka</span></h1>
+                    <h2 class="about__subtitle">Dream Big, Believe Bold!</h2>
+                    <a href="#" class="button">Resume</a>
+                    <a href="https://medium.com/@srivastavaanushka3" class="button">Blogs</a>
+                    
+                </div>
+            
+                <div class="home__social">
+                    <a href="https://www.linkedin.com/in/pranit-gupta-803233190/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.instagram.com/pranit0401/" class="home__social-icon"><i class='bx bxl-instagram' ></i></i></a>
+                    <a href="https://github.com/Pranit5895" class="home__social-icon"><i class='bx bxl-github' ></i></i></a>
+                </div>
+
+                <div class="home__img">    
+                    <img src="pic1.jpg" alt="pic1" >
+                </div>
+            </section>
 </body>
 </html>
