--- a/index.html
+++ b/index.html
@@ -72,5 +72,35 @@
                     </div>                                   
                 </div>
             </section>
+
+            <!--===== EDUCATION =====-->
+            <section class="qualif section " id="qualif">
+                <h2 class="section-title">Education</h2>
+                    
+                    <div class="q2">
+                        <div class="img">
+                            <a href="" class="qualif__icon"><i class="fa fa-graduation-cap" aria-hidden="true" id="img"></i></a>
+                        </div>
+                        <div>
+                            <h2 class="qualif__subtitle">Genesis Global School, Noida</h2>
+                            <p class="qualif__text">2017-2019</p>
+                            <br>
+                            <p class="qualif__text">CBSE - Board , PCM + Computer</p>
+                            <p class="qualif__text">Secured 90%</p>
+                        </div>
+                    </div>
+
+                    <div class="q3">
+                        <div class="img">
+                            <a href="" class="qualif__icon"><i class="fa fa-graduation-cap" aria-hidden="true" id="img"></i></a>
+                        </div>
+                        <div>
+                            <h2 class="qualif__subtitle">Genesis Global School, Noida</h2>
+                            <p class="qualif__text">2012-2017</p>
+                            <br>
+                            <p class="qualif__text">CBSE - Board , Computer Science</p>
+                            <p class="qualif__text">Secured 10CGPA</p>
+                        </div>
+                    </div>
 </body>
 </html>
