--- a/index.html
+++ b/index.html
@@ -102,5 +102,23 @@
                             <p class="qualif__text">Secured 10CGPA</p>
                         </div>
                     </div>
+
+                    <div class="q4">
+                        <div class="img">
+                            <a href="" class="qualif__icon"><i class="fa fa-graduation-cap" aria-hidden="true" id="img"></i></a>
+                        </div>
+                        <div>
+                            <h2 class="qualif__subtitle">Courses</h2>
+                            <div class="course_container1">
+                                <div >
+                                    <a href="https://drive.google.com/drive/u/0/folders/1vyBy0NuoV5O-zMlChQBiW8RJnVCxLwKe" class="button2">GOOGLE IT AUTOMATION USING PYTON</a>
+                                </div>
+                                <div>
+                                    <a href="https://drive.google.com/drive/u/0/folders/1HqD-ckAO0DaJljeOfhEntLjCj0VDBPnn" class="button2">Java Programming</a>
+                                </div>
+                                <div>
+                                    <a href="https://drive.google.com/drive/u/0/folders/1hsi9esoERZAZ-RbKI4_NmtLHWA9U4t2F" class="button2">GUIDED PROJECTS</a>
+                                </div>
+                            </div>
 </body>
 </html>
