--- a/index.html
+++ b/index.html
@@ -120,5 +120,20 @@
                                     <a href="https://drive.google.com/drive/u/0/folders/1hsi9esoERZAZ-RbKI4_NmtLHWA9U4t2F" class="button2">GUIDED PROJECTS</a>
                                 </div>
                             </div>
+
+                            <!--===== CONTACT =====-->
+             <section class="contact section" id="contact">
+                <h2 class="section-title">Contact</h2>
+
+                <div class="contact__container bd-grid">
+                    <form action="" class="contact__form">
+                        <input type="text" placeholder="Name" class="contact__input">
+                        <input type="mail" placeholder="Email" class="contact__input">
+                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <input type="button" value="Enviar" class="contact__button button">
+                    </form>
+                </div>
+            </section>
+        </main>
 </body>
 </html>
