--- a/index.html
+++ b/index.html
@@ -135,5 +135,10 @@
                 </div>
             </section>
         </main>
+
+        <script src="https://unpkg.com/scrollreveal"></script>
+
+        <!--===== MAIN JS =====-->
+        <script src="main.js"></script>
 </body>
 </html>
