--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="pic1.jpg" alt="pic1" >
+                    <img src="Pic.png" alt="" >
                 </div>
             </section>
 
@@ -65,7 +65,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="pic.jpg" alt="">
+                        <img src="Pic.png" alt="">
                     </div>
                     
                     <div>
